# tsp-microcontroller-application

./: .gitignore  README.md  microcontroller-application.service  pyproject.toml
.github/workflows/: check.yml  test.yml
microcontroller_application/: __main__.py  log.py
microcontroller_application/interfaces/: message_types.py
microcontroller_application/modules/m01_environment/: __init__.py
microcontroller_application/modules/m01_environment/software_components/: sc02_camera_driver.py  sc04_light_sensor_driver.py  sc06_motion_sensor_driver.py  sc08_occupancy_sensor_driver.py
microcontroller_application/modules/m02_human_detection/: __init__.py
microcontroller_application/modules/m02_human_detection/software_components/: sc02_ai_human_detection.py
microcontroller_application/modules/m03_activity_recognition/: __init__.py
microcontroller_application/modules/m03_activity_recognition/software_components/: sc02_ai_pose_estimation.py
microcontroller_application/modules/m04_person_identification/: __init__.py
microcontroller_application/modules/m04_person_identification/software_components/: sc03_face_recognition.py  sc04_intruder_alert.py  sc05_add_new_trusted_people.py
microcontroller_application/modules/m05_preferences/: __init__.py
microcontroller_application/modules/m05_preferences/software_components/: sc03_storage_saving.py
microcontroller_application/modules/m06_control/: __init__.py  message_types.py
microcontroller_application/modules/m06_control/software_components/: sc02_synthesis.py  sc03_power_derivation.py  sc04_duty_cycle.py
microcontroller_application/modules/m07_lighting/: __init__.py
microcontroller_application/modules/m07x_lighting_connector/: __init__.py
microcontroller_application/modules/m07x_lighting_connector/software_components/: sc02x_dimmer_connector.py
microcontroller_application/modules/m08_aggregation/: __init__.py
microcontroller_application/modules/m08_aggregation/software_components/: sc03_current_state.py  sc04_history_compaction.py  sc05_history_expansion.py  sc06_camera_recording.py  sc07_camera_playback.py  sc08_save_intruder_alerts.py
microcontroller_application/modules/m09x_proxy_connector/: __init__.py
tests/: test_example.py
tests/modules/m02_human_detection/software_components/: test_sc02_ai_human_detection.py
tests/modules/m06_control/: test_integration.py
tests/modules/m06_control/software_components/: test_sc02_synthesis.py  test_sc03_power_derivation.py  test_sc04_duty_cycle.py
tests/modules/m08_aggregation/software_components/: test_sc06_camera_recording.py
tests/utils/: test_lookup_table.py
utils/: asynchronous.py  iterables.py  lookup_table.py  stores.py
