[tool.poetry]
name = "tsp-microcontroller-application"
version = "2023.02.20.00"
description = "The application to run on the microcontroller of our smart home system"
authors = [
    "J or Jacob Babich <jacobbabichpublic+git@gmail.com>",
    "Evan Cardasis <todoaddtheiremails@example.com>",
    "Robert Hausz <todoaddtheiremails@example.com>",
    "Kevin Mexicotte <todoaddtheiremails@example.com>",
]
readme = "README.md"
packages = [{ include = "microcontroller_application" }]

[tool.poetry.dependencies]
python = "^3.10"
babichjacob-option-and-result = "^0.1.2"
babichjacob-bounded-channel = "^0.2.0"
babichjacob-oneshot-channel = "^0.2.0"
numpy = "^1.24.1"
pillow = "^9.4.0"
pandas = "^1.5.3"
dlib = "^19.24.0"
face-recognition = "^1.3.0"
babichjacob-store = "^0.2.0"
babichjacob-emitter = "^0.1.1"
babichjacob-emitter-tools = "^0.1.2"

[tool.poetry.dev-dependencies]
types-Pillow = "^9.4.0.13"
black = "^22.12.0"
mypy = "^0.991"
pylint = "^2.15.10"

[tool.poetry.group.test.dependencies]
imagehash = "^4.3.1"
pytest = "^7"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
